fixed footer overlap issue

--- a/site.css
+++ b/site.css
@@ -59,7 +59,7 @@ footer {
     color: rgb(107 79 106);
     position: fixed;
     left: 50px;
-    bottom: 50px;
+    bottom: 5px;
     width: 100%;
 }
 
